force-app/main/default/objects/DHA_Student__c/DHA_Student__c.object-meta.xml
<CustomObject>
    <label>DHA Student</label>
    <nameField>
        <label>DHA Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DHA Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>