force-app/main/default/objects/DHA_Student__c/fields/Student_code__c.field-meta.xml
<CustomField>
    <fullName>Student_code__c</fullName>
    <displayFormat>ST-{000000}</displayFormat>
    <label>Student Code</label>
    <type>AutoNumber</type>
</CustomField>