force-app/main/default/objects/DHA_Student__c/validationRules/birthday_after.validationRule-meta.xml
<ValidationRule>
    <fullName>birthday_after</fullName>
    <active>false</active>
    <description>Student birthdate should be after 1990/01/01</description>
    <errorConditionFormula>Birthday__c &lt; date(1990,01,01)</errorConditionFormula>
    <errorMessage>This student birthdate is invalid. Birthdate should be after 1990/01/01</errorMessage>
</ValidationRule>