force-app/main/default/objects/DHA_Student__c/validationRules/birthday_before.validationRule-meta.xml
<ValidationRule>
    <fullName>birthday_before</fullName>
    <active>false</active>
    <description>Student birthdate should be 6 years before the current date</description>
    <errorConditionFormula>(TODAY() - Birthday__c)  &gt;  6</errorConditionFormula>
    <errorMessage>This student age is not enough to attend our classes.</errorMessage>
</ValidationRule>