force-app/main/default/objects/DHA_Student__c/validationRules/leght_name.validationRule-meta.xml
<ValidationRule>
    <fullName>leght_name</fullName>
    <active>true</active>
    <description>Name should be at least 3 characters long</description>
    <errorConditionFormula>len(text(Birthday__c)) &lt; 3</errorConditionFormula>
    <errorMessage>This student name is too short.(Validation rule)</errorMessage>
</ValidationRule>