force-app/main/default/objects/DHA_Student__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Student_code__c</columns>
    <columns>NAME</columns>
    <columns>Birthday__c</columns>
    <columns>Email__c</columns>
    <columns>Gender__c</columns>
    <columns>Address__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>